# tv_diplom

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  db.sqlite3  entrypoint.sh  pyproject.toml  readme.md
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/news/: handlers.py  schemas.py
core/apps/common/: models.py
core/apps/news/: admin.py  apps.py
core/apps/news/migrations/: 0001_initial.py
core/apps/news/models/: __init__.py  news.py
core/apps/program_lists/: apps.py
core/project/: asgi.py  settings.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
